maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:5: error: type mismatch;
 found   : Int
 required: Boolean
    if (getDirection==Direction.NORTH && !estFaceMur()&&sommeAngle){
                                                        ^